Dev config file changed for metric reporting daemon

--- a/ansible/roles/appliance-dev/tasks/setup_dev_metric_daemon.yml
+++ b/ansible/roles/appliance-dev/tasks/setup_dev_metric_daemon.yml
@@ -28,5 +28,5 @@
 
 - name: Start dev metric daemon
   ansible.builtin.shell:
-    cmd: screen -dmS ct-metrics $(go env GOPATH)/bin/air -- --config-file config/config.dev.vm.yml
+    cmd: screen -dmS ct-metrics $(go env GOPATH)/bin/air -- --config-file config/config.dev.yml
     chdir: "{{dev_root_dir}}/ct-metric-reporting-daemon"
