--- a/concertim-ui/docker-compose.yml
+++ b/concertim-ui/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - static-content:/opt/concertim/opt/ct-visualisation-app/public
       - concertim-etc:/opt/concertim/etc
+    environment:
+      - METRIC_DAEMON_URL=http://metrics:3000
     expose:
       - 7000
     depends_on:
