--- a/concertim-ui/docker-compose.yml
+++ b/concertim-ui/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - concertim-etc:/opt/concertim/etc
     environment:
       - METRIC_DAEMON_URL=http://metrics:3000
+      - DB_HOST=db
     expose:
       - 7000
     depends_on:
