Add libyaml-dev dependency

--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -15,6 +15,7 @@
       - bison
       - build-essential
       - libpq-dev
+      - libyaml-dev
 
 - name: Check for existing installation
   ansible.builtin.command:
