Remove finalization role
It was originally needed to handle the phoenix modules, delia and mia.
Now it serves no purpose.

--- a/ansible/roles/metric-reporting/tasks/main.yml
+++ b/ansible/roles/metric-reporting/tasks/main.yml
@@ -51,7 +51,7 @@
 - name: Enable daemons
   ansible.builtin.service:
     name: "{{ item }}"
-    # state: started
+    state: started
     enabled: yes
   loop: "{{ daemons }}"
   when: not docker_build | bool
