--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -24,7 +24,9 @@ Vagrant.configure("2") do |config|
       # v.memory = 8192
       # v.memory = 4096
       # v.memory = 3072
-      v.memory = 2048
+      # v.memory = 2048
+      # v.memory = 1024
+      v.memory = 512
     end
 
     config.vm.define box[:name], primary: idx == 0 do |v|
