Change RRAs for RRDs created by ganglia
The archives are:

 * One hour without consolidation (one data point every 15 seconds).
 * One day consolidating MIN, MAX and AVERAGE of 5 minutes.
 * 90 days consolidating MIN, MAX and AVERAGE of one hour.

--- a/ansible/roles/ganglia/files/gmetad.conf
+++ b/ansible/roles/ganglia/files/gmetad.conf
@@ -46,3 +46,9 @@ setuid_username "ganglia"
 # Where gmetad stores its round-robin databases
 # default: "/var/lib/ganglia/rrds"
 # rrd_rootdir "/some/other/place"
+
+# Metrics are reported every 15 seconds.  The archives are:
+#  * One hour without consolidation.
+#  * One day consolidating MIN, MAX and AVERAGE of 5 minutes.
+#  * 90 days consolidating MIN, MAX and AVERAGE of one hour.
+RRAs "RRA:AVERAGE:0.5:1:240" "RRA:AVERAGE:0.5:20:288" "RRA:AVERAGE:0.5:240:2160" "RRA:MAX:0.5:1:240" "RRA:MAX:0.5:20:288" "RRA:MAX:0.5:240:2160" "RRA:MIN:0.5:1:240" "RRA:MIN:0.5:20:288" "RRA:MIN:0.5:240:2160"
