Playbook to build concertim docker containers
The process is roughly as follows:

1. Create directory structure on host machine.
2. Checkout source repositories for ct-visualiser and ct-metrics-daemon.
3. Use Dockerfile in source repos to build docker images.
4. Copy docker compose file to host machine.
5. Use docker compose to create and migrate databases.

Limitations:

* Not all services are included.  We're currently missing: reverse proxy
  server, cluster builder, all of the openstack concertim services.
* There are issues around how the secrets are added to the containers.

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -79,11 +79,21 @@ Vagrant.configure("2") do |config|
           type: "shell",
           run: "never",
           path: "scripts/install-ansible.sh"
+        v.vm.provision "install_docker",
+          type: "shell",
+          run: "never",
+          path: "scripts/install-docker.sh"
         v.vm.provision "run_build_playbook",
           type: "shell",
           run: "never",
           inline: <<-SH
             AWS_ACCESS_KEY_ID=#{ENV.fetch('AWS_ACCESS_KEY_ID', '')} AWS_SECRET_ACCESS_KEY=#{ENV.fetch('AWS_SECRET_ACCESS_KEY', '')} /vagrant/scripts/run-build-playbook.sh
+          SH
+        v.vm.provision "run_alt_playbook",
+          type: "shell",
+          run: "never",
+          inline: <<-SH
+            GH_TOKEN=#{ENV.fetch('GH_TOKEN', '')} /vagrant/scripts/run-alt-playbook.sh
           SH
 
       end
