Provide secrets via env_file
Previously, the secrets were being provided using the docker secrets
mechanism.  However, this had some issues.  In order to have the
postgres container be able to read the password secret the file on the
host machine needed to be readable by the same UID as the postgres user
in the postgres container.  There is no mechanism to change the
owner/group/mode for a secret (at least not if it is provided via a bind
mount).

The result of this was that the postgres password was exposed to
user/group 999 on the host machine.  Whoever that might be.

Now we provide secrets via an env_file.  The secrets env file on the
host is readable only by root.  However, the contents of that file are
available in the output of the `docker inspect` command.  This exposes
the secret to anyone who is a member of the `docker` group.  But it was
already available to them as they could always `docker exec` into a
running container and read the secret from there.

--- a/production/files/docker-compose.yml
+++ b/production/files/docker-compose.yml
@@ -3,17 +3,14 @@ name: concertim
 services:
   visualisation:
     image: concertim-visualisation-app
-    secrets:
-      - db-password
-      - jwt-secret
     volumes:
       - static-content:/opt/concertim/opt/ct-visualisation-app/public
       - concertim-etc:/opt/concertim/etc
+    env_file:
+      - secrets/secrets.env
     environment:
       - METRIC_DAEMON_URL=http://metrics:3000
-      - DB_HOST=db
-      - DB_PASSWORD_FILE=/run/secrets/db-password
-      - JWT_SECRET_FILE=/run/secrets/jwt-secret
+      - POSTGRES_HOST=db
     expose:
       - 7000
     depends_on:
@@ -23,13 +20,11 @@ services:
 
   metrics:
     image: concertim-metric-reporting-daemon
-    secrets:
-      - jwt-secret
     volumes:
       - concertim-etc:/opt/concertim/etc
       - rrd-data:/var/lib/ganglia/rrds
-    environment:
-      - JWT_SECRET_FILE=/run/secrets/jwt-secret
+    env_file:
+      - secrets/secrets.env
     expose:
       - 3000
     networks:
@@ -52,16 +47,11 @@ services:
     image: postgres
     restart: always
     user: postgres
-    secrets:
-      - source: db-password
-        target: db-password
-        uid: "999"  # The UID of the postgres user.
-        gid: "999"
     volumes:
       - db-data:/var/lib/postgresql/data
       - ./db/init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
-    environment:
-      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
+    env_file:
+      - secrets/secrets.env
     expose:
       - 5432
     healthcheck:
@@ -78,15 +68,8 @@ volumes:
   static-content:
   concertim-etc:
 
-secrets:
-  db-password:
-    file: secrets/db-password
-  jwt-secret:
-    file: secrets/jwt-secret
-
 networks:
   concertim-net:
     driver: bridge
     driver_opts:
       com.docker.network.driver.mtu: 1400
-
