--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - concertim-etc:/opt/concertim/etc
     environment:
       - METRIC_DAEMON_URL=http://metrics:3000
-      - DB_HOST=db
+      - POSTGRES_HOST=db
     expose:
       - 7000
     depends_on:
