--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,6 +3,7 @@ CT_SRC_DIR = [ ENV['FLIGHT_CODE'], "#{ENV['HOME']}/projects/concertim/src" ]
   .map { |p| File.expand_path(p) }
   .detect { |p| File.directory?(p) }
 ANSIBLE_DIR="../ansible"
+PRODUCTION_DIR="../production"
 MACHINES = [
   {
     name: "dev1",
@@ -53,6 +54,7 @@ Vagrant.configure("2") do |config|
         run: "never"
 
       unless to_boolean(ENV['ACCEPTANCE'])
+        v.vm.synced_folder PRODUCTION_DIR, "/production"
         v.vm.synced_folder ANSIBLE_DIR, "/ansible"
         if File.directory?(CT_SRC_DIR)
           v.vm.synced_folder CT_SRC_DIR, "/opt/concertim/dev"
