Better handle rails credentials
Rails master key and credentials.yml.enc are now per-site.  They also
persist redeployments of the visualisation app. The master key is stored
along with all of our other secrets.  The encrypted credentials are
stored on the docker etc volume.  Some hoops have to be jumped through
to get rails to use the path on the docker volume for both reading and
editing the credentials.

Fixes #62

--- a/production/files/docker-compose.yml
+++ b/production/files/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       - METRIC_DAEMON_URL=http://metrics:3000
       - POSTGRES_HOST=db
+      - CREDENTIALS_CONTENT_PATH=/opt/concertim/etc/credentials.yml.enc
     expose:
       - 7000
     depends_on:
