--- a/production/templates/nginx/default.conf
+++ b/production/templates/nginx/default.conf
@@ -18,7 +18,7 @@ server {
   ssl_ciphers HIGH:!aNULL:!MD5;
   ssl_prefer_server_ciphers on;
 
-  root {{static_content_dir}};
+  root {{static_content_mount}};
 
   location ^~ /assets/ {
 	  # The default behaviour is to serve the files from the configured root, which
