--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -85,17 +85,17 @@ Vagrant.configure("2") do |config|
           type: "shell",
           run: "never",
           path: "scripts/install-docker.sh"
-        v.vm.provision "run_build_playbook",
+        v.vm.provision "run_dev_playbook",
           type: "shell",
           run: "never",
           inline: <<-SH
-            AWS_ACCESS_KEY_ID=#{ENV.fetch('AWS_ACCESS_KEY_ID', '')} AWS_SECRET_ACCESS_KEY=#{ENV.fetch('AWS_SECRET_ACCESS_KEY', '')} /vagrant/scripts/run-build-playbook.sh
+            AWS_ACCESS_KEY_ID=#{ENV.fetch('AWS_ACCESS_KEY_ID', '')} AWS_SECRET_ACCESS_KEY=#{ENV.fetch('AWS_SECRET_ACCESS_KEY', '')} /vagrant/scripts/run-dev-playbook.sh
           SH
-        v.vm.provision "run_alt_playbook",
+        v.vm.provision "run_prod_playbook",
           type: "shell",
           run: "never",
           inline: <<-SH
-            GH_TOKEN=#{ENV.fetch('GH_TOKEN', '')} /vagrant/scripts/run-alt-playbook.sh
+            GH_TOKEN=#{ENV.fetch('GH_TOKEN', '')} /vagrant/scripts/run-prod-playbook.sh
           SH
 
       end
