Fix issue with destroying encryption keys on rebuild
If the Rails credentials.yml.enc file exists, we don't recreate it. This
preserves the encryption keys, but prevents us from updating it with
additional credentials in the future.

If we need to do the latter, perhaps it is as simple as copying the file
to the default Rails location running the commands to create the new
credentials and copying it back to the persistent location.  This
however is untested.

--- a/production/playbook.yml
+++ b/production/playbook.yml
@@ -148,19 +148,26 @@
           args: {}
 
     - name: Create visualisation credentials
-      vars:
-        # Make sure to escape any single quote chars here.
-        script: |
-          set -e
-          set -o pipefail
-          EDITOR=cat ./bin/rails credentials:edit
-          cp -a config/credentials.yml.enc {{credentials_path}}
-          ./bin/rake encryption:generate --trace
-          mv config/credentials.yml.enc {{credentials_path}}
-      ansible.builtin.shell:
-        chdir: "{{ct_docker_dir}}"
-        cmd: |
-          docker compose run --rm visualisation /bin/bash -c '{{script}}'
+      block:
+        - name: Check for existing credentials
+          ansible.builtin.stat:
+            path: "{{credentials_path}}"
+          register: credentials_file
+        - name: Create credentials
+          when: not credentials_file.stat.exists
+          vars:
+            # Make sure to escape any single quote chars here.
+            script: |
+              set -e
+              set -o pipefail
+              EDITOR=cat ./bin/rails credentials:edit
+              cp -a config/credentials.yml.enc {{credentials_path}}
+              ./bin/rake encryption:generate --trace
+              mv config/credentials.yml.enc {{credentials_path}}
+          ansible.builtin.shell:
+            chdir: "{{ct_docker_dir}}"
+            cmd: |
+              docker compose run --rm visualisation /bin/bash -c '{{script}}'
 
     - name: Precompile visualisation assets
       ansible.builtin.shell:
